# tiny-cmd

./: Cargo.toml  LICENSE
src/: main.rs
