[package]
name = "tiny"
version = "0.1.0"
authors = ["Gustav Utke Kauman <gkauman@eadu.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["macros"] }
